--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "cookie-session": "^2.1.1",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "mongoose": "^8.19.1",
     "openai": "^6.3.0",
